@@ -1477,25 +1477,16 @@ public class NameNode implements NamenodeProtocols, FSConstants {
       }
     }
 
-    FSImage fsImage = new FSImage(dirsToFormat, editDirsToFormat);
-    FSNamesystem nsys = new FSNamesystem(fsImage, conf);
-    
     // if clusterID is not provided - see if you can find the current one
     String clusterId = StartupOption.FORMAT.getClusterId();
     if(clusterId == null || clusterId.equals("")) {
-      // try to get one from the existing storage
-      clusterId = fsImage.getStorage().determineClusterId();
-      if (clusterId == null || clusterId.equals("")) {
-        throw new IllegalArgumentException("Format must be provided with clusterid");
-      }
-      if(isConfirmationNeeded) {
-        System.err.print("Use existing cluster id=" + clusterId + "? (Y or N)");
-        if(System.in.read() != 'Y') {
-          throw new IllegalArgumentException("Format must be provided with clusterid");
-        }
-        while(System.in.read() != '\n'); // discard the enter-key
-      }
+      // Generate a new cluster id
+      clusterId = NNStorage.newClusterID();
     }
+    System.out.println("Formatting using clusterid: " + clusterId);
+    
+    FSImage fsImage = new FSImage(dirsToFormat, editDirsToFormat);
+    FSNamesystem nsys = new FSNamesystem(fsImage, conf);
     nsys.dir.fsImage.getStorage().format(clusterId);
     return false;
   }
