@@ -19,6 +19,7 @@ package org.apache.hadoop.hdfs.server.namenode;
 
 import static org.apache.hadoop.hdfs.DFSConfigKeys.DFS_NAMENODE_NAME_DIR_KEY;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.fail;
 
 import java.io.File;
@@ -44,48 +45,7 @@ public class TestClusterId {
   private static final Log LOG = LogFactory.getLog(TestClusterId.class);
   File hdfsDir;
   
-  @Before
-  public void setUp() throws IOException {
-    String baseDir = System.getProperty("test.build.data", "build/test/data");
-
-    hdfsDir = new File(baseDir, "dfs");
-    if ( hdfsDir.exists() && !FileUtil.fullyDelete(hdfsDir) ) {
-      throw new IOException("Could not delete test directory '" + hdfsDir + "'");
-    }
-    LOG.info("hdfsdir is " + hdfsDir.getAbsolutePath());
-  }
-  
-  @After
-  public void tearDown() throws IOException {
-    if ( hdfsDir.exists() && !FileUtil.fullyDelete(hdfsDir) ) {
-      throw new IOException("Could not tearDown test directory '" + hdfsDir + "'");
-    }
-  }
-  
-  @Test
-  public void testFormatClusterIdOption() throws IOException {
-    Configuration config = new Configuration();
-    
-    config.set(DFS_NAMENODE_NAME_DIR_KEY, new File(hdfsDir, "name").getPath());
-
-    // 1. should fail to format without cluster id
-    StartupOption.FORMAT.setClusterId("");
-    try {
-      NameNode.format(config);
-      fail("should fail to format without cluster id");
-    } catch (IllegalArgumentException e) {
-      LOG.info("correctly thrown IllegalArgumentException ");
-    } catch (Exception e) {
-      fail("failed with a wrong exception:" + e.getLocalizedMessage());
-    }
-
-    // 2. successful format
-    StartupOption.FORMAT.setClusterId("mycluster");
-    try {
-      NameNode.format(config);
-    } catch (Exception e) {
-      fail("failed to format namenode:"+e.getLocalizedMessage());
-    }
+  private String getClusterId(Configuration config) throws IOException {
     // see if cluster id not empty.
     Collection<URI> dirsToFormat = FSNamesystem.getNamespaceDirs(config);
     Collection<URI> editsToFormat = new ArrayList<URI>(0);
@@ -97,24 +57,54 @@ public class TestClusterId {
     Properties props = sd.readFrom(sd.getVersionFile());
     String cid = props.getProperty("clusterID");
     LOG.info("successfully formated : sd="+sd.getCurrentDir() + ";cid="+cid);
-    if(cid == null || cid.equals("")) {
-      fail("didn't get new ClusterId");
-    }
-    
+    return cid;
+  }
+  
+  @Before
+  public void setUp() throws IOException {
+    String baseDir = System.getProperty("test.build.data", "build/test/data");
 
-    // 3. format with existing cluster id
+    hdfsDir = new File(baseDir, "dfs");
+    if ( hdfsDir.exists() && !FileUtil.fullyDelete(hdfsDir) ) {
+      throw new IOException("Could not delete test directory '" + 
+          hdfsDir + "'");
+    }
+    LOG.info("hdfsdir is " + hdfsDir.getAbsolutePath());
+  }
+  
+  @After
+  public void tearDown() throws IOException {
+    if ( hdfsDir.exists() && !FileUtil.fullyDelete(hdfsDir) ) {
+      throw new IOException("Could not tearDown test directory '" +
+          hdfsDir + "'");
+    }
+  }
+  
+  @Test
+  public void testFormatClusterIdOption() throws IOException {
+    Configuration config = new Configuration();
+    
+    config.set(DFS_NAMENODE_NAME_DIR_KEY, new File(hdfsDir, "name").getPath());
+
+    // 1. should format without cluster id
+    //StartupOption.FORMAT.setClusterId("");
+    NameNode.format(config);
+    // see if cluster id not empty.
+    String cid = getClusterId(config);
+    assertTrue("Didn't get new ClusterId", (cid != null && !cid.equals("")) );
+
+    // 2. successful format with given clusterid
+    StartupOption.FORMAT.setClusterId("mycluster");
+    NameNode.format(config);
+    // see if cluster id matches with given clusterid.
+    cid = getClusterId(config);
+    assertTrue("ClusterId didn't match", cid.equals("mycluster"));
+
+    // 3. format without any clusterid again. It should generate new
+    //clusterid.
     StartupOption.FORMAT.setClusterId("");
-    try {
-      NameNode.format(config);
-    } catch (Exception e) {
-      fail("failed to format namenode:"+e.getLocalizedMessage());
-    }
-    props = sd.readFrom(sd.getVersionFile());
-    String newCid = props.getProperty("clusterID");
-    LOG.info("successfully formated with new cid: sd="+sd.getCurrentDir() + ";cid="+newCid);
-    if(newCid == null || newCid.equals("")) {
-      fail("didn't get new ClusterId");
-    }
-    assertTrue("should be the same", newCid.equals(cid));
+    NameNode.format(config);
+    String newCid = getClusterId(config);
+    assertFalse("ClusterId should not be the same", newCid.equals(cid));
   }
 }
